--- a/src/main/resources/templates/admin-panel-page.html
+++ b/src/main/resources/templates/admin-panel-page.html
@@ -84,7 +84,15 @@
           </span>
       </button>
     </a>
-    <a th:href="@{'/'}">
+    <a th:href="@{'/items/new'}">
+      <button type="button" >
+          <span>
+            <h2>Создать товар</h2>
+            <br />
+          </span>
+      </button>
+    </a>
+    <a th:href="@{'/invoices/new?page=0'}">
       <button type="button" >
           <span>
             <h2>Завести накладную</h2>
