--- a/src/main/resources/templates/item-edit-page.html
+++ b/src/main/resources/templates/item-edit-page.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
     <title>Bootleg Amazon</title>
