users page + user edit for admin page

--- a/src/main/resources/templates/admin-panel-page.html
+++ b/src/main/resources/templates/admin-panel-page.html
@@ -68,7 +68,7 @@
           </span>
       </button>
     </a>
-    <a th:href="@{'/'}" th:if="${isAdmin}">
+    <a th:href="@{'/profile/all?page=0'}" th:if="${isAdmin}">
       <button type="button" >
           <span>
             <h2>Пользователи</h2>
