--- a/src/main/resources/templates/error-page.html
+++ b/src/main/resources/templates/error-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Bootleg Amazon</title>
+        <title>Ошибка</title>
         <meta property="og:title" content="Travel Agency" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="utf-8" />
