--- a/src/main/resources/templates/invoice-page.html
+++ b/src/main/resources/templates/invoice-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Invoice-page - Travel Agency</title>
+    <title>Накладная</title>
     <meta property="og:title" content="Invoice-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
@@ -59,27 +59,53 @@
           <div class="header-container">
             <div class="tool-box-container tool-box-root-class-name">
               <div class="tool-box-container1">
-                <input
-                  type="text"
-                  placeholder="Поиск товара"
-                  class="tool-box-input input"
-                />
-                <svg
-                  viewBox="0 0 950.8571428571428 1024"
-                  class="tool-box-search"
-                >
-                  <path
-                    d="M658.286 475.429c0-141.143-114.857-256-256-256s-256 114.857-256 256 114.857 256 256 256 256-114.857 256-256zM950.857 950.857c0 40-33.143 73.143-73.143 73.143-19.429 0-38.286-8-51.429-21.714l-196-195.429c-66.857 46.286-146.857 70.857-228 70.857-222.286 0-402.286-180-402.286-402.286s180-402.286 402.286-402.286 402.286 180 402.286 402.286c0 81.143-24.571 161.143-70.857 228l196 196c13.143 13.143 21.143 32 21.143 51.429z"
-                  ></path></svg
-                ><svg viewBox="0 0 1024 1024" class="tool-box-cart">
-                  <path
-                    d="M726 768q34 0 59 26t25 60-25 59-59 25-60-25-26-59 26-60 60-26zM42 86h140l40 84h632q18 0 30 13t12 31q0 2-6 20l-152 276q-24 44-74 44h-318l-38 70-2 6q0 10 10 10h494v86h-512q-34 0-59-26t-25-60q0-20 10-40l58-106-154-324h-86v-84zM298 768q34 0 60 26t26 60-26 59-60 25-59-25-25-59 25-60 59-26z"
-                  ></path></svg
-                ><svg viewBox="0 0 1024 1024" class="tool-box-profile">
-                  <path
-                    d="M576 706.612v-52.78c70.498-39.728 128-138.772 128-237.832 0-159.058 0-288-192-288s-192 128.942-192 288c0 99.060 57.502 198.104 128 237.832v52.78c-217.102 17.748-384 124.42-384 253.388h896c0-128.968-166.898-235.64-384-253.388z"
-                  ></path>
-                </svg>
+
+                 <div th:if="${user == null}">
+                  <button>
+                    <a th:href="@{/login}">
+                      <svg viewBox="0 0 1024 1024" class="tool-box-cart">
+                        <path
+                                d="M726 768q34 0 59 26t25 60-25 59-59 25-60-25-26-59 26-60 60-26zM42 86h140l40 84h632q18 0 30 13t12 31q0 2-6 20l-152 276q-24 44-74 44h-318l-38 70-2 6q0 10 10 10h494v86h-512q-34 0-59-26t-25-60q0-20 10-40l58-106-154-324h-86v-84zM298 768q34 0 60 26t26 60-26 59-60 25-59-25-25-59 25-60 59-26z"
+                        ></path>
+                      </svg>
+                    </a>
+                  </button>
+                </div>
+
+                  <div th:if="${user != null}">
+                    <button>
+                      <a th:href="@{'/cart'}">
+                        <svg viewBox="0 0 1024 1024" class="tool-box-cart">
+                          <path
+                                  d="M726 768q34 0 59 26t25 60-25 59-59 25-60-25-26-59 26-60 60-26zM42 86h140l40 84h632q18 0 30 13t12 31q0 2-6 20l-152 276q-24 44-74 44h-318l-38 70-2 6q0 10 10 10h494v86h-512q-34 0-59-26t-25-60q0-20 10-40l58-106-154-324h-86v-84zM298 768q34 0 60 26t26 60-26 59-60 25-59-25-25-59 25-60 59-26z"
+                          ></path>
+                        </svg>
+                      </a>
+                    </button>
+                  </div>
+
+                  <div th:if="${user != null}">
+                    <a th:href="@{/profile}">
+                      <button>
+                        <svg viewBox="0 0 1024 1024" class="tool-box-profile">
+                          <path
+                                  d="M576 706.612v-52.78c70.498-39.728 128-138.772 128-237.832 0-159.058 0-288-192-288s-192 128.942-192 288c0 99.060 57.502 198.104 128 237.832v52.78c-217.102 17.748-384 124.42-384 253.388h896c0-128.968-166.898-235.64-384-253.388z"
+                          ></path>
+                        </svg>
+                      </button> </a>
+                  </div>
+
+                  <div th:if="${user == null}">
+                    <a th:href="@{/login}">
+                      <button>
+                        <svg viewBox="0 0 1024 1024" class="tool-box-profile">
+                          <path
+                                  d="M576 706.612v-52.78c70.498-39.728 128-138.772 128-237.832 0-159.058 0-288-192-288s-192 128.942-192 288c0 99.060 57.502 198.104 128 237.832v52.78c-217.102 17.748-384 124.42-384 253.388h896c0-128.968-166.898-235.64-384-253.388z"
+                          ></path>
+                        </svg>
+                      </button>
+                    </a>
+                  </div>
               </div>
             </div>
           </div>
