invoces page + access list fix

--- a/src/main/resources/templates/admin-panel-page.html
+++ b/src/main/resources/templates/admin-panel-page.html
@@ -100,6 +100,14 @@
           </span>
       </button>
     </a>
+      <a th:href="@{'/invoices/all?page=0'}">
+          <button type="button" >
+              <span>
+                <h2>Посмотреть накладные</h2>
+                <br />
+              </span>
+          </button>
+      </a>
     <a th:href="@{'/profile'}">
       <button type="button" >
           <span>
