--- a/src/main/resources/templates/profile-edit-page.html
+++ b/src/main/resources/templates/profile-edit-page.html
@@ -135,7 +135,7 @@
                     <input
                             type="text" th:field="*{name}"
                             placeholder="ФИО"
-                            autocomplete="currentUser.name"
+                            autocomplete="name"
                             class="new-edit-profile-page-input input">
                 </label>
             </div>
