--- a/src/main/resources/templates/order-page.html
+++ b/src/main/resources/templates/order-page.html
@@ -206,6 +206,11 @@
           </div>
 
         </div>
+        <button type="button" class="new-edit-profile-page-button1">
+          <h2>
+            <a th:href="@{/orders/all?page=0}">Вернуться</a>
+          </h2>
+        </button>
         <footer class="footer-footer">
           <span class="footer-text">
             <span>© 2022 С18-501, все права зарегистрированы.</span>
