--- a/src/main/resources/templates/registration-page.html
+++ b/src/main/resources/templates/registration-page.html
@@ -78,7 +78,7 @@
                             type="text"
                             th:field="*{name}"
                             placeholder="ФИО"
-                            class="new-edit-profile-page-input input">
+                            class="new-edit-profile-page-input input"/>
                 </label>
             </div>
             <div>
@@ -86,8 +86,10 @@
                     <input
                             type="text"
                             th:field="*{phone}"
+                            pattern="\+([7])([0-9]{3})([0-9]{3})([0-9]{2})([0-9]{2})"
                             placeholder="Телефон"
-                            class="new-edit-profile-page-input3 input">
+                            title="Телефон должен быть в формате +7_ _ _ _ _ _ _ _ _ _"
+                            class="new-edit-profile-page-input3 input"/>
                 </label>
             </div>
 
@@ -97,7 +99,7 @@
                             type="text"
                             th:field="*{login}"
                             placeholder="Логин"
-                            class="new-edit-profile-page-input3 input">
+                            class="new-edit-profile-page-input3 input"/>
                 </label>
             </div>
 
@@ -107,7 +109,7 @@
                             type="password"
                             th:field="*{password}"
                             placeholder="Пароль"
-                            class="new-edit-profile-page-input4 input">
+                            class="new-edit-profile-page-input4 input"/>
 
                 </label>
             </div>
@@ -119,7 +121,7 @@
                             th:field="*{passwordConfirm}"
                             placeholder="Повторите пароль"
                             autocomplete="new-password"
-                            class="new-edit-profile-page-input4 input">
+                            class="new-edit-profile-page-input4 input"/>
 
                 </label>
             </div>
