Ограничение на пароль

--- a/src/main/resources/templates/registration-page.html
+++ b/src/main/resources/templates/registration-page.html
@@ -109,6 +109,9 @@
                             type="password"
                             th:field="*{password}"
                             placeholder="Пароль"
+                            minlength="4"
+                            maxlength="8"
+                            title="Количество символов в пароле должно быть от 4 до 8"
                             class="new-edit-profile-page-input4 input"/>
 
                 </label>
