--- a/src/main/resources/templates/profile-edit-page.html
+++ b/src/main/resources/templates/profile-edit-page.html
@@ -145,7 +145,9 @@
                             type="password"
                             th:field="*{password}"
                             placeholder="Пароль"
-                            autocomplete="new-password"
+                            minlength="4"
+                            maxlength="8"
+                            title="Количество символов в пароле должно быть от 4 до 8"
                             class="new-edit-profile-page-input3 input">
                 </label>
             </div>
